--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/saakar-sengar-3a8702129/" class="icon brands fa-linkedin">Linkedin <span class="label">Linkedin</span></a></li>
+							<li><a href="www.linkedin.com/in/saakar-sengar" class="icon brands fa-linkedin">Linkedin <span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/saakar30" class="icon brands fa-github">Github <span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -146,7 +146,7 @@
 					<footer id="footer">
 						<ul class="icons">
 							<h3>Please visit my Github and Linkedin for more information and projects.</h3>
-							<li><a href="https://www.linkedin.com/in/saakar-sengar-3a8702129/" class="icon brands fa-linkedin">Linkedin <span class="label">Linkedin</span></a></li>
+							<li><a href="www.linkedin.com/in/saakar-sengar" class="icon brands fa-linkedin">Linkedin <span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/saakar30" class="icon brands fa-github">Github <span class="label">GitHub</span></a></li>
 						</ul>
 						<section class="split contact">
