--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">PROJECTS</a>
+						<a href="https://github.com/saakar30?tab=repositories" class="logo">PROJECTS</a>
 					</header>
 
 				<!-- Nav -->
@@ -44,7 +44,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Machine Learning Project</span>
-									<h2><a href="#">Wafer Fault Detection with Deployment <br />
+									<h2><a href="https://github.com/saakar30/Wafer_Fault_Detection">Wafer Fault Detection with Deployment <br />
 									and Model Retraining</a></h2>
 									<p>Built a classification methodology to predict the quality of wafer sensors based on the given training data with
 										590 sensors available in a single wafer.<br />
@@ -53,9 +53,9 @@
 										Algorithms used – KNN Means Clustering, Random Forest and XGBoost Classifier to find best AUC score.
 										Deployed the project in Microsoft Azure and Amazon AWS cloud service.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/5fosX.png" alt="" /></a>
+								<a href="https://github.com/saakar30/Wafer_Fault_Detection" class="image main"><img src="images/5fosX.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/saakar30/Wafer_Fault_Detection" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -64,15 +64,15 @@
 								<article>
 									<header>
 										<span class="date">Python Project</span>
-										<h2><a href="https://github.com/saakar30/Review-Scrapper">Review Scrapper <br />
+										<h2><a href="https://github.com/saakar30/Review_Scraper">Review Scrapper <br />
 											with Heroku Deployment </a></h2>
 									</header>
-									<a href="https://github.com/saakar30/Review-Scrapper" class="image fit"><img src="images/web.png" alt="" /></a>
+									<a href="https://github.com/saakar30/Review_Scraper" class="image fit"><img src="images/web.png" alt="" /></a>
 									<p>Built a web scraper using a Python IDE (Integrated Development Environment) and MongoDB that collects<br />
 										the reviews of a product from the internet and deployed the application to Heroku cloud. Discovered that Web<br />
 										Scraping can be used in aggregating marketing data, competitive pricing, financial insights.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/saakar30/Review-Scrapper" class="button">View Project</a></li>
+										<li><a href="https://github.com/saakar30/Review_Scraper" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
